--- a/packages/figma-plugin/css-variables/src/frontend/index.html
+++ b/packages/figma-plugin/css-variables/src/frontend/index.html
@@ -6,9 +6,19 @@
       name='viewport'
       content='width=device-width, initial-scale=1.0'>
     <title>Document</title>
+    <link
+      rel='stylesheet'
+      href='index.css'>
   </head>
   <body>
     <p id='test'>Welcome to Figma</p>
+    <div id='iframeContainer'>
+      <iframe
+        id='authoredCss'
+        height='3840'
+        width='3840'
+        sandbox='allow-scripts'></iframe>
+    </div>
   </body>
   <script
     type='module'
