--- a/bak/packages/figma-plugin/css-variables 2025APR301628/src/frontend/index.html
+++ b/bak/packages/figma-plugin/css-variables 2025APR301628/src/frontend/index.html
@@ -17,8 +17,7 @@
         id='authoredCss'
         height='3840'
         width='3840'
-        sandbox='allow-scripts'
-        srcdoc='REPLACE_WITH_IFRAME_INDEX_HTML'></iframe>
+        sandbox='allow-scripts'></iframe>
     </div>
   </body>
   <script
