--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite TS in HTML Test</title>
+    <meta charset='UTF-8'>
+    <meta
+      name='viewport'
+      content='width=device-width, initial-scale=1.0'>
+    <title>MCP Test Page</title>
   </head>
   <body>
-    <h1>Vite TS in HTML Test</h1>
-    <p>Check the browser's developer console.</p>
-    <script type="ts">
-      const a: number = 1;
-      console.log('The value of "a" is:', a);
-    </script>
+    <h1>MCP Server Test</h1>
+    <p>This is a test page for the web-eval-agent MCP server.</p>
+    <button onclick="alert('Button clicked!')">Click Me</button>
   </body>
 </html>
