feat(style): add new Vale styles for Microsoft and proselint
Adds a comprehensive set of new Vale styles, including:
- Microsoft style guide rules for grammar, punctuation, and word choice.
- Proselint rules for common writing issues like cliches, jargon, and gender bias.
- Write-good rules for conciseness and active voice.

These new styles will help enforce consistent and high-quality writing across the project's documentation and other text-based assets.

refactor(eslint): update unicorn/prevent-abbreviations rule
refactor(module): update ensuring function unit tests to use direct references
chore: add empty .vale.ini file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta
       name='viewport'
       content='width=device-width, initial-scale=1.0'>
-    <title>MCP Test Page</title>
+    <title>MCP test page</title>
   </head>
   <body>
-    <h1>MCP Server Test</h1>
-    <p>This is a test page for the web-eval-agent MCP server.</p>
-    <button onclick="alert('Button clicked!')">Click Me</button>
+    <h1>MCP server test</h1>
+    <p>This is a test page for the web-eval-personal digital assistant MCP server.</p>
+    <button onclick="alert('Button clicked!')">Click</button>
   </body>
 </html>
